# auto-sbm

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DOCS.md  FINAL_ISSUE_ANALYSIS.md  KNOWLEDGE-GRAPH-CONTINUATION.md  NEW_PROJECT_IDEA.md  PROGRESS_TRACKING_FIXES.md  PRP_EXECUTION_TODOS.md  PUBLISHING.md  QUICK_REFERENCE.md  README.md  REFACTORING.md  REMIGRATION_FIX_SUMMARY.md  REPOSITORY_SEPARATION_PLAN.md  RICH_UI_FIXES.md  SIMPLIFIED_UI_FIXES.md  TODO_NEXT_STEPS.md  TODO_QUALITY_IMPROVEMENT.md  UPDATE_INSTRUCTIONS.md  all_team_prs.json  analyze_nate_history.py  backfill_stats.py  backfill_stats_v3.py  combined-mixins.scss  config.json  debug_input.py  env.example  fetch_historical.py  fix-scss-files.py  historical_raw.json  merged_prs.json  migration_log_enhancement_todo.md  nate_all_prs.json  package-lock.json  (+32 more)
.claude/: settings.json  settings.local.json
.codex/: auth.json  config.toml  history.jsonl  models_cache.json  version.json
.gemini/: settings.json
.sbm-reports/: index.md  jerryseinersaltlakekia-20260115-015406.md  test-slug-20260112-021653.md  test-slug-20260112-022116.md  test-slug-20260114-172525.md  test-slug-20260114-172919.md  test-slug-20260114-172952.md  test-slug-20260114-173118.md  test-slug-20260114-173208.md  test-slug-20260114-173442.md  test-slug-20260114-174011.md  test-slug-20260114-175841.md  test-slug-20260114-180511.md
PRPs/: PRP_READINESS_SUMMARY.md  auto-sbm-quality-improvement-prd.md  auto-sbm-quality-improvement-progress-tracker.md  auto-sbm-quality-improvement.md  migration-critical-fixes.md  professional-scss-parser.md  prp_base_create.md  ruff_errors.txt  scss-parser-replacement-prd.md  scss-parser-replacement.md
_bmad-output/: architecture.md  bmm-workflow-status.yaml  epics.md  index.md  project-context.md  project-scan-report.json  sprint-status.yaml
ai-knowledgebase/: README.md  project-overview.md
archived/: site_builder_migration.py
backups/: cli.py.bak  cli.py.bak2  cli.py.bak3  cli.py.bak4
docs/: 2026-01-08-can-you-write-me-a-script-that-retrieves-the-slugs.txt  AI_MEMORY_REFERENCE.md  API_REFERENCE_GENERATED.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  GENERATED_DOCUMENTATION.md  PRODUCTION_READINESS_REPORT.md  QUICK_REFERENCE.md  README.md  TROUBLESHOOTING.md  auto-sbm-default-rtdb-export.json  critical-code-quality-fixes.md  essential-tests-needed.md  index.md  slack-stats-guide.md  stats-sync-full-scope.md  technical-changelog.md
documentation/: AI_MEMORY_REFERENCE.md  API_REFERENCE_GENERATED.md  ENHANCED-STYLE-EXTRACTION.md  FEATURES-TO-ADD.md  GENERATED_DOCUMENTATION.md  IMPROVED-STYLE-PARSER.md  NEW_DEV_SETUP_GUIDE.md  auto-sbm-project-cleanup-plan.md
mixins/: _appearance.scss  _border-radius.scss  _box-shadow.scss  _box-sizing.scss  _breakpoints.scss  _color-classes.scss  _filter.scss  _font-size.scss  _gradients.scss  _keyframes.scss  _list-padding.scss  _placeholder.scss  _positioning.scss  _px-to-em.scss  _pz-defaults.scss  _responsive-iframe.scss  _rotate.scss  _save-compare-tabs.scss  _scrollbars.scss  _site-builder.scss  _social.scss  _transforms.scss  _transition.scss  _translatez.scss  _transparent-background.scss  _vertical-align.scss  _z-index.scss
pr/: README.md  create-pr-global.sh  pr_config.sh  pr_content.sh  pr_utils.sh
sbm/: __init__.py  __main__.py  cli.py  config.py
sbm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sbm_v2.egg-info/: PKG-INFO  SOURCES.txt
scripts/: README.md  analyze_export.py  archive_extra_runs.py  audit_team_stats.py  backfill_all_lines_migrated.py  backfill_firebase.py  backfill_firebase_runs.py  backfill_from_github_prs.py  backfill_unknown_authors.py  backfill_verified_runs.py  bump_version.py  check_runs.py  clean_db_duplicates.py  clean_empty_runs.py  cleanup_firebase_garbage.py  cross_check_csv_db.py  cross_check_salesforce.py  daily_firebase_sync.py  debug_stats_update.py  delete_empty_users.py  delete_invalid_users.py  delete_verification_run.py  enable_auto_merge.sh  find_missing_run.py  find_team_duplicates.py  fix_false_success.py  fix_unknown_run_author.py  force_debug_run.py  force_sync_local.py  format-scss-hook.py  inspect_failed_users.py  inspect_suspicious_runs.py  investigate_missing_data.py  list_unknown_runs.py  migrate_db_keys.py  migrate_pr_timestamps.py  monitor_progress.py  purge_non_success.py  recover_missing_run.py  recover_missing_runs.py  (+12 more)
stats/: JamesOch.json  Lenny-Len.json  abondDealerInspire.json  adalbec2016.json  brandonstranc.json  csheppard-di.json  dancrum-di.json  di-mgarver.json  donati-a.json  evantritt.json  irwinx16.json  jwinter100.json  kschlarb.json  mflores76.json  nate-hart-di.json  nhart_dealerinspire_com.json  nzbasnikDI.json  saolson2.json  stephthorn.json  tcollier-di.json  vande012.json
test-output/: sb-inside.scss  sb-vdp.scss
tests/: FINAL_TEST_SUMMARY.md  README.md  __init__.py  conftest.py  debug_mixin.py  mixin_analysis_report.md  reproduction.py  test_actual_workflow.py  test_auto_update_wrapper.py  test_background_automation.py  test_cli_history.py  test_cli_input.py  test_cli_reproduction.py  test_cli_stats_display.py  test_cli_update_robustness.py  test_config.py  test_config_migration.py  test_core_cli.py  test_core_config.py  test_core_file_ops.py  test_core_git.py  test_core_paths.py  test_core_scss.py  test_duplicate_prevention.py  test_edge_case.py  test_environment_compatibility.py  test_firebase_integration.py  test_firebase_sync.py  test_formatting.py  test_fullauto_mode.py  test_functions_analyzer.py  test_git_pr_what_notes.py  (+45 more)
(+386 files in other folders)
